# ssamantle-game-server-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: helpers.py
app/api/routes/: games.py  similarity.py  users.py
app/api/v1/: auth.py  games.py
app/core/: config.py
app/repository/: __init__.py  database.py  deps.py  models.py  sessions.py
app/repository/rdb/: __init__.py  games.py  guesses.py  participants.py
app/repository/redis/: __init__.py  client.py  game.py  leaderboard.py  participants.py
app/repository/vector/: __init__.py  db.py  store.py
app/service/: __init__.py  auth.py  deps.py  dto.py  exceptions.py  game_state.py  games.py  guesses.py  leaderboard.py  participants.py
app/utils/: __init__.py
loadtests/: README.md  __init__.py  config.py  hooks.py  state.py
loadtests/data/: words_smoke.txt
loadtests/scenarios/: __init__.py  gameplay_mix.py  locustfile.py  polling_cache.py  smoke.py
loadtests/shapes/: __init__.py  ramp.py  smoke.py  soak.py
loadtests/users/: __init__.py  base.py  host.py  player.py  poller_cache.py
tests/: conftest.py
tests/unit/service/: test_auth_service.py  test_game_service.py  test_guess_service.py  test_leaderboard_service.py  test_participant_service.py
tests/unit/utils/: test_utils.py
