[project]
name = "ssamantle-game-server"
version = "1.0.0"
description = "FastAPI, FastText 기반 싸멘틀 게임 서버"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
]
