[project]
name = "ssamantle-game-server"
version = "1.0.0"
description = "FastAPI-based Ssamantle game server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "numpy>=2.4.6",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
perf = [
    "locust>=2.44.0,<3",
]
